Fix code smells
Signed-off-by: sdimitrov9 <stoyan.dimitrov@limechain.tech>